--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -4,7 +4,7 @@
 \PassOptionsToPackage{dvipsnames,svgnames,x11names}{xcolor}
 %
 \documentclass[
-  super,
+  authoryear,
   preprint,
   3p]{elsarticle}
 
@@ -124,14 +124,14 @@
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 \usepackage[]{natbib}
-\bibliographystyle{elsarticle-num}
+\bibliographystyle{elsarticle-harv}
 \usepackage{bookmark}
 
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Manuscript},
-  pdfauthor={Niklas Hausmann},
+  pdftitle={Interspecies comparisons of Mg/Ca ratios in limpet shells},
+  pdfauthor={Niklas Hausmann; Donna Surge; Francisco Zangrando; Angelica Tivoli; Ivan Briz-Godino},
   pdfkeywords={keyword1, keyword2},
   colorlinks=true,
   linkcolor={blue},
@@ -144,17 +144,45 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Manuscript \\\large{A Short Subtitle} }
+\title{Interspecies comparisons of Mg/Ca ratios in limpet shells}
 \author[1]{Niklas Hausmann%
 \corref{cor1}%
 }
  \ead{niklas@palaeo.eu} 
+\author[2]{Donna Surge%
+%
+}
+
+\author[3]{Francisco Zangrando%
+%
+}
+
+\author[3]{Angelica Tivoli%
+%
+}
+
+\author[4]{Ivan Briz-Godino%
+%
+}
+
 
 \affiliation[1]{organization={Leibniz Zentrum für
 Archäologie},addressline={Ludwig-Lindenschmit-Forum
 1},city={Mainz},country={Germany},countrysep={,},postcode={55116},postcodesep={}}
+\affiliation[2]{organization={University of North
+Carolina},addressline={104 South Road, 225 Geology
+Building},city={Chapel Hill,
+NC},country={US},countrysep={,},postcode={27599-3315},postcodesep={}}
+\affiliation[3]{organization={CONICET (Consejo Nacional de
+Investigaciones Científicas y Técnicas)},addressline={Avenida Maipú
+305},city={Ushuaia},country={Argentina},countrysep={,},postcode={V9410BJA},postcodesep={}}
+\affiliation[4]{organization={},country={Spain},countrysep={,},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
+
+
+
+
 
         
 \begin{abstract}
@@ -171,20 +199,6 @@ This document is a template demonstrating the Aps format.
 \end{keyword}
 \end{frontmatter}
     
-\begin{verbatim}
- [1] "QG1-7188-1" "QG1-7189-2" "QG2-1061-1" "QG2-1064-1" "QG2-7180-1"
- [6] "QG2-7180-2" "QG1-7246-1" "ND-1016-3"  "ND-1016-4"  "NM-1016-1" 
-[11] "NM-1016-3" 
-\end{verbatim}
-
-\begin{verbatim}
-character(0)
-\end{verbatim}
-
-\begin{verbatim}
-[1] "ND-1016-1" "NM-1016-5"
-\end{verbatim}
-
 \begin{figure}[H]
 
 {\centering \includegraphics{Manuscript_files/figure-pdf/Raw Data-1.pdf}
